--- a/manifest.json
+++ b/manifest.json
@@ -2,15 +2,65 @@
   "name": "whc004",
   "short_name": "Lab8-Starter",
   "description": "description ",
-  "start_url": "",
-  "display": "",
-  "background_color": "",
-  "theme_color": "",
+  "start_url": "https://whc004.github.io/Lab8-Starter/",
+  "display": "standalone",
+  "background_color": "#FFA500",
+  "theme_color": "#00008B",
   "icons": [
     {
       "src": "/assets/images/icons/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
+    },
+    {
+      "src": "/assets/images/icons/icon-256x256.png",
+      "sizes": "256x256",
+      "type": "image/png"
+    },
+    {
+      "src": "/assets/images/icons/icon-384x384.png",
+      "sizes": "384x384",
+      "type": "image/png"
+    },
+    {
+      "src": "/assets/images/icons/icon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    },
+    {
+      "src": "/assets/images/icons/arrow-down.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    },
+    {
+      "src": "/assets/images/icons/0-star.svg",
+      "sizes": "192x192",
+      "type": "image/svg"
+    },
+    {
+      "src": "/assets/images/icons/1-star.svg",
+      "sizes": "192x192",
+      "type": "image/svg"
+    },
+    {
+      "src": "/assets/images/icons/2-star.svg",
+      "sizes": "192x192",
+      "type": "image/svg"
+    },
+    {
+      "src": "/assets/images/icons/3-star.svg",
+      "sizes": "192x192",
+      "type": "image/svg"
+    },
+    {
+      "src": "/assets/images/icons/4-star.svg",
+      "sizes": "192x192",
+      "type": "image/svg"
+    },
+    {
+      "src": "/assets/images/icons/5-star.svg",
+      "sizes": "192x192",
+      "type": "image/svg"
     }
   ]
 }
